Actions
Bug #3832
closedAMD E721 workaround panics on KVM
Start date:
2013-06-19
Due date:
% Done:
0%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
Several people reported that Illumos panics when run in Linux-KVM on AMD hardware.
This is caused by the E721 workaround, the MSR access is trapped by KVM. It can be fixed by wrapping the accesses in on_trap/no_trap.
Updated by Hans Rosenfeld almost 9 years ago
Updated by Hans Rosenfeld almost 9 years ago
- Status changed from New to Resolved
Actions